# firebird-rainfall

./: Final Project.ipynb  README.md  hello.py  pyproject.toml  styles.css
.ipynb_checkpoints/: Final Project-checkpoint.ipynb  pyproject-checkpoint.toml
.streamlit/: config.toml
