[project]
name = "final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "ruff-lsp>=0.0.59",
    "ruff>=0.8.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "streamlit>=1.40.2",
    "scikit-learn>=1.5.2",
    "plotly>=5.24.1",
    "statsmodels>=0.14.4",
]
